[gd_scene load_steps=37 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scripts/slot_generator.gd" type="Script" id=2]
[ext_resource path="res://scripts/deforester_generator.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/footsteps.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/hit_2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/map/bg_forest.png" type="Texture" id=6]
[ext_resource path="res://scripts/cactuses_generator.gd" type="Script" id=7]
[ext_resource path="res://assets/ui/card_slot_2.png" type="Texture" id=8]
[ext_resource path="res://scenes/card_cactus.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/card_coconut.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/cloud_hot_slot.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/cloud_cold_slot.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/ui/table.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/water.png" type="Texture" id=14]
[ext_resource path="res://scripts/hot_generator.gd" type="Script" id=15]
[ext_resource path="res://scripts/cold_generator.gd" type="Script" id=16]
[ext_resource path="res://scripts/water_generator.gd" type="Script" id=17]
[ext_resource path="res://assets/ui/loser_panel.png" type="Texture" id=18]
[ext_resource path="res://assets/ui/image10.png" type="Texture" id=19]
[ext_resource path="res://scripts/btn_restart_area.gd" type="Script" id=20]
[ext_resource path="res://assets/ui/winner_panel.png" type="Texture" id=21]
[ext_resource path="res://scripts/coconut_generator.gd" type="Script" id=22]
[ext_resource path="res://scenes/helper.tscn" type="PackedScene" id=23]
[ext_resource path="res://assets/ui/btn_help.png" type="Texture" id=24]
[ext_resource path="res://assets/ui/deforesters_killed.png" type="Texture" id=25]
[ext_resource path="res://scripts/bg_sounds.gd" type="Script" id=26]
[ext_resource path="res://assets/sounds/bg_frogs_jungle.wav" type="AudioStream" id=27]
[ext_resource path="res://assets/sounds/bird_1.wav" type="AudioStream" id=28]
[ext_resource path="res://assets/sounds/CICADA3.wav" type="AudioStream" id=29]
[ext_resource path="res://assets/sounds/hit_projetil_2.wav" type="AudioStream" id=30]
[ext_resource path="res://assets/sounds/hit_projetil_1.wav" type="AudioStream" id=31]
[ext_resource path="res://assets/sounds/thunderstorm_1.wav" type="AudioStream" id=32]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://font.ttf"

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 3
outline_color = Color( 0, 0.623529, 1, 1 )
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="SegmentShape2D" id=3]
b = Vector2( 0, 620 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 110.327, 108.55 )

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="slots" type="Node2D" parent="."]
editor/display_folded = true

[node name="slot_generator" type="Position2D" parent="slots"]
script = ExtResource( 2 )

[node name="deforesters" type="Node2D" parent="."]

[node name="deforester_generator" type="Position2D" parent="deforesters"]
script = ExtResource( 3 )

[node name="deforester_timer" type="Timer" parent="deforesters/deforester_generator"]
wait_time = 10.0
autostart = true

[node name="deforester_hord_timer" type="Timer" parent="deforesters/deforester_generator"]
wait_time = 40.0
autostart = true

[node name="footsteps" type="AudioStreamPlayer" parent="deforesters"]
stream = ExtResource( 4 )
volume_db = -12.0
pitch_scale = 0.9

[node name="hit" type="AudioStreamPlayer" parent="deforesters"]
stream = ExtResource( 5 )
volume_db = -7.0
pitch_scale = 1.3

[node name="tractors" type="Node2D" parent="."]
editor/display_folded = true

[node name="tractor_generator" type="Position2D" parent="tractors"]

[node name="bg_forest" type="Sprite" parent="."]
position = Vector2( -15.3366, -0.663391 )
scale = Vector2( 2.8, 2.8 )
texture = ExtResource( 6 )
centered = false

[node name="cactuses" type="Node2D" parent="."]
editor/display_folded = true

[node name="cactuses_generator" type="Position2D" parent="cactuses"]
script = ExtResource( 7 )

[node name="card_slots" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 200, 0 )
z_index = 4

[node name="card_slot_1" type="Sprite" parent="card_slots"]
texture = ExtResource( 8 )
centered = false

[node name="card_cactus" parent="card_slots/card_slot_1" instance=ExtResource( 9 )]

[node name="card_slot_4" type="Sprite" parent="card_slots"]
position = Vector2( 74, 0 )
texture = ExtResource( 8 )
centered = false

[node name="card_coconut" parent="card_slots/card_slot_4" instance=ExtResource( 10 )]

[node name="card_slot_2" type="Sprite" parent="card_slots"]
position = Vector2( 148, 0 )
texture = ExtResource( 8 )
centered = false

[node name="cloud_hot_slot" parent="card_slots/card_slot_2" instance=ExtResource( 11 )]

[node name="card_slot_3" type="Sprite" parent="card_slots"]
position = Vector2( 222, 0 )
texture = ExtResource( 8 )
centered = false

[node name="cloud_cold_slot" parent="card_slots/card_slot_3" instance=ExtResource( 12 )]

[node name="card_slot_5" type="Sprite" parent="card_slots"]
position = Vector2( 296, 0 )
texture = ExtResource( 8 )
centered = false

[node name="card_slot_6" type="Sprite" parent="card_slots"]
position = Vector2( 370, 0 )
texture = ExtResource( 8 )
centered = false

[node name="water_board" type="Node2D" parent="."]
editor/display_folded = true
z_index = 4

[node name="bg" type="Sprite" parent="water_board"]
self_modulate = Color( 0.0235294, 0.356863, 0.0352941, 0.756863 )
scale = Vector2( 0.24, 0.17 )
texture = ExtResource( 13 )
centered = false

[node name="water_icon" type="Sprite" parent="water_board"]
position = Vector2( 164.488, 60.7527 )
scale = Vector2( 0.303737, 0.314324 )
texture = ExtResource( 14 )

[node name="Control" type="Control" parent="water_board"]
margin_left = -0.544525
margin_top = 9.42628
margin_right = 190.455
margin_bottom = 106.426

[node name="Label" type="Label" parent="water_board/Control"]
margin_left = 13.9401
margin_top = 6.44527
margin_right = 152.94
margin_bottom = 75.4453
custom_fonts/font = SubResource( 2 )
text = "300"

[node name="clouds" type="Node2D" parent="."]
editor/display_folded = true

[node name="hot_generator" type="Position2D" parent="clouds"]
script = ExtResource( 15 )

[node name="cold_generator" type="Position2D" parent="clouds"]
script = ExtResource( 16 )

[node name="water_fragments" type="Node2D" parent="."]
editor/display_folded = true

[node name="water_generator" type="Position2D" parent="water_fragments"]
script = ExtResource( 17 )

[node name="water_gen_timer" type="Timer" parent="water_fragments/water_generator"]
wait_time = 10.0
autostart = true

[node name="limit_line" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -12, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="limit_line"]
position = Vector2( -56.8932, -3.8635 )
shape = SubResource( 3 )

[node name="loser_panel" type="Node2D" parent="."]
visible = false
z_index = 20

[node name="loser_panel_sprite" type="Sprite" parent="loser_panel"]
position = Vector2( 323.68, 147.56 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 18 )
centered = false

[node name="btn_restart" type="Sprite" parent="loser_panel/loser_panel_sprite"]
position = Vector2( 507.313, 615.41 )
texture = ExtResource( 19 )
centered = false

[node name="btn_restart_area" type="Area2D" parent="loser_panel/loser_panel_sprite/btn_restart"]
script = ExtResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="loser_panel/loser_panel_sprite/btn_restart/btn_restart_area"]
position = Vector2( 127.354, 124.217 )
shape = SubResource( 4 )

[node name="winner_panel" type="Node2D" parent="."]
pause_mode = 2
visible = false
z_index = 20

[node name="winner_panel_sprite" type="Sprite" parent="winner_panel"]
position = Vector2( 525.68, 316.56 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 21 )

[node name="btn_play_again" type="Sprite" parent="winner_panel/winner_panel_sprite"]
scale = Vector2( 4, 5 )

[node name="btn_play_again" type="Button" parent="winner_panel/winner_panel_sprite/btn_play_again"]
margin_left = -61.5164
margin_top = 65.1183
margin_right = 76.4836
margin_bottom = 85.1183
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0.611765, 0.00392157, 1 )
custom_colors/font_color_hover = Color( 0.615686, 0.466667, 0.227451, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 0.443137, 0, 1 )
text = "JOGAR NOVAMENTE"

[node name="coconut_trees" type="Node2D" parent="."]
editor/display_folded = true

[node name="coconut_generator" type="Position2D" parent="coconut_trees"]
script = ExtResource( 22 )

[node name="game_timer" type="Timer" parent="."]
autostart = true

[node name="helper" parent="." instance=ExtResource( 23 )]
visible = false

[node name="btn_help" type="Sprite" parent="."]
editor/display_folded = true
scale = Vector2( 0.5, 0.4 )

[node name="Button" type="Button" parent="btn_help"]
margin_left = 1777.89
margin_top = 19.7691
margin_right = 2003.89
margin_bottom = 240.769
icon = ExtResource( 24 )

[node name="deforesters_killed_board" type="Node2D" parent="."]
editor/display_folded = true
z_index = 4

[node name="deforesters_killed" type="Sprite" parent="deforesters_killed_board"]
position = Vector2( 763.218, 49.6472 )
scale = Vector2( 0.940098, 1.3768 )
texture = ExtResource( 25 )

[node name="deforesters_killed_ctrl" type="Control" parent="deforesters_killed_board"]
margin_left = -0.544525
margin_top = 9.42628
margin_right = 190.455
margin_bottom = 106.426

[node name="deforesters_killed_label" type="Label" parent="deforesters_killed_board/deforesters_killed_ctrl"]
margin_left = 674.025
margin_top = 30.0493
margin_right = 860.025
margin_bottom = 91.0493
custom_fonts/font = SubResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1

[node name="bg_sounds" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 26 )

[node name="bg_frogs" type="AudioStreamPlayer" parent="bg_sounds"]
stream = ExtResource( 27 )
volume_db = -10.165
autoplay = true

[node name="bird_1_timer" type="Timer" parent="bg_sounds"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="bird_sound" type="AudioStreamPlayer" parent="bg_sounds"]
stream = ExtResource( 28 )

[node name="cicada_timer" type="Timer" parent="bg_sounds"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="cicada" type="AudioStreamPlayer" parent="bg_sounds"]
stream = ExtResource( 29 )
volume_db = -5.474

[node name="coco_hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 30 )
volume_db = -6.0

[node name="spike_hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 31 )
volume_db = -15.0

[node name="inundation" type="Node2D" parent="."]

[node name="inundation_timer" type="Timer" parent="inundation"]
wait_time = 60.0
one_shot = true

[node name="thunder_timer" type="Timer" parent="inundation"]
wait_time = 3.5
one_shot = true

[node name="thunderstorm" type="AudioStreamPlayer" parent="inundation"]
stream = ExtResource( 32 )
volume_db = -10.685
[connection signal="timeout" from="deforesters/deforester_generator/deforester_timer" to="deforesters/deforester_generator" method="_on_deforester_timer_timeout"]
[connection signal="timeout" from="deforesters/deforester_generator/deforester_hord_timer" to="deforesters/deforester_generator" method="_on_deforester_hord_timer_timeout"]
[connection signal="timeout" from="water_fragments/water_generator/water_gen_timer" to="water_fragments/water_generator" method="_on_water_gen_timer_timeout"]
[connection signal="area_entered" from="limit_line" to="." method="_on_limit_line_area_entered"]
[connection signal="pressed" from="winner_panel/winner_panel_sprite/btn_play_again/btn_play_again" to="." method="_on_btn_play_again_pressed"]
[connection signal="timeout" from="game_timer" to="." method="_on_game_timer_timeout"]
[connection signal="pressed" from="btn_help/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="bg_sounds/bird_1_timer" to="bg_sounds" method="_on_bird_1_timer_timeout"]
[connection signal="timeout" from="bg_sounds/cicada_timer" to="bg_sounds" method="_on_cicada_timer_timeout"]
[connection signal="timeout" from="inundation/inundation_timer" to="." method="_on_inundation_timer_timeout"]
[connection signal="timeout" from="inundation/thunder_timer" to="." method="_on_thunder_timer_timeout"]
